# apollo

./: Cargo.toml  README.md
src/: main.rs
src/definitions/: backup.rs  communication.rs  media.rs  mod.rs
src/gtk_interface/: mod.rs  utils.rs  video_window.rs
src/system_interface/: backup_handler.rs  media_playback.rs  mod.rs
src/web_interface/: mod.rs
