[package]
name = "apollo"
version = "1.0.0"
authors = ["Patton Doyle <patton@DecodeDetroit.com>"]
description = "Realtime Remote-Controlled Multimedia Player"
license = "GPL-3.0-or-later"
edition="2021"

[profile.release]
lto = true

[dependencies]
fnv = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gtk = "0.18"
gdk = "0.18"
gio = "0.18"
gdk-pixbuf = "0.18"
glib = "0.18"
cairo-rs = "^0"
gstreamer = "0.21"
gstreamer-video = "^0"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
async-stream = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

